# wx-compiler

./: .gitignore  .gitmodules  .mocharc.js  CMakeLists.txt  CMakeLists1.txt  README.md  changelog.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml
.github/actions/test/: action.yml
.github/workflows/: release.yml
docker/: docker-entrypoint  entrypoint
docs/: disammbly.md
node/: .mocharc.js  README.md
node/nodejs/: wcc  wcsc
node/test/node-modules/: README.MD  index.js  wcc_test.js  wcsc_test.js
node/test/node-modules/cases/wcc/: wcc.test.js
node/test/node-modules/cases/wcc/lazyload/case2/: config.json
node/test/node-modules/cases/wcc/lazyload/case3/: config.json
node/test/node-modules/cases/wcc/lazyload/case4/: config.json
node/test/node-modules/cases/wcc/raw/case1/: config.json
node/test/node-modules/cases/wcc/raw/case2/: config.json
node/test/node-modules/cases/wcc/raw/case3/: config.json
node/test/node-modules/cases/wcsc/lazyload/case1/: config.json
node/test/node-modules/cases/wcsc/raw/case1/: config.json
node/test/node-modules/utils/: scan.js
node/test/node-modules/wcc_wine/lib/: wcc.js  wcsc.js
node/test/runner/: ast-helper.js  node.js  tool.js
node/test/wcc/lla/: lla.js  lla.test.js  raw-parse.js  wcc.js
node/test/wcc/llw/: llw.test.js
node/test/wcc/raw/: raw.test.js
node/test/wcsc/raw/: raw.test.js
node/wcc_node/lib/: wcc.js
node/wcc_node/src/: wcc.js
nodejs/: wcc  wcsc
src/: wcc.cpp  wcsc.cpp
src/include/: bittest.h  define.h  file.h  json.h  night.h  string_utils.h  usage.h  wcc.h  wxa.h  wxml.h  wxss.h
src/module/: CMakeLists.txt  wcc.cpp  wcsc.cpp
src/module/config/: wcc.cc  wcsc.cc
src/module/include/: wcc.hh  wcsc.hh
src/night/: night.cpp  ns_ast_parse.cpp  ns_compile_js.cpp  ns_node.cpp  ns_sourcemap.cpp  ns_stream.cpp  ns_token.cpp
src/night/ns_god/: ns_god.cpp
src/night/sourcemap/: sourcemap.cpp
src/night/str/: str.cpp
src/nwjs/: .gitignore  CMakeLists.txt  wcc.cpp
src/nwjs/config/: wcc.cc
src/nwjs/include/: wcc.hh
src/utils/: bittest.cpp  file.cpp  json.cpp  string_utils.cpp
src/wcc/: usage.cpp
src/wcsc/: usage.cpp
src/wxa/: wxa.cpp
src/wxml/: common.cpp  compiler.cpp  name_allocator.cpp  rewrite.cpp  rpx.cpp
src/wxml/dom_lib/: common.cpp  expr_syntax_tree.cpp  machine.cpp  parse_exception.cpp  parser.cpp  rvm_op_code_position.cpp  rvm_op_code_position_recorder.cpp  str_cache.cpp  token.cpp  tokenizer.cpp  wxml_dom.cpp
src/wxml/expr_lib/: base.cpp  bnf.cpp  common.cpp  expr_syntax_tree.cpp  parser.cpp  token.cpp  tokenizer.cpp  transit_table.cpp
src/wxml/string_templating/: common.cpp  token.cpp
src/wxss/: common.cpp  token.cpp  tokenizer.cpp  x_compiler.cpp
src/wxss/css_tree_lib/: base.cpp  bnf.cpp  css_syntax_tree.cpp  css_tree_lib.cpp  lexical_checker.cpp  parser.cpp  rule.cpp  rule_chain.cpp  transit_table.cpp
test/: .gitignore  cmd.txt  code.asm  demo.test.js  main.cpp  resolve_path.cpp  test-linux-module.sh  test.cpp  transit_table.cpp  vector  vector.cpp  wcc.cpp  wcc.sh  wcsc.sh
test/disassembly/: compiler_lazy.cpp  init.c  parse_source.cpp
test/node-gyp/: binding.cc  binding.gyp  build.sh  package.json  pnpm-lock.yaml
test/node-modules/: index.html  index.js  wcc_node  wcc_test.js  wcsc_test.js
test/node-modules/cases/: wcc.test.js
test/node-modules/cases/wcc/: wcc.test.js
test/node-modules/cases/wcc/case1/: config.json
test/node-modules/cases/wcc/lazyload/case1/: config.json
test/node-modules/cases/wcc/lazyload/case5/: config.json
test/node-modules/cases/wcc/lazyload/case5/output/: wine-output.json
test/node-modules/cases/wcc/lazyload/case6/: config.json
test/node-modules/cases/wcsc/: wcsc.test.js
test/node-modules/cases/wcsc/case1/: config.json
test/node-modules/cases/wcsc/lazyload/case2/: config.json
test/node-modules/wcc_wine/: package.json
test/runner/: binary-linux.ts  binary-windows.ts  code.js  linux.ts  module-linux.ts  module-windows.ts  node.js  node.ts  types.d.ts  windows.ts  wine.js
test/runner/nwjs/: compiler.js  module-prepare.sh  wine-prepare.sh  wine.sh
test/runner/nwjs/package.nw/: index.html  main.js  package.json
test/runner/nwjs/package.nw/wcc/: package.json
test/runner/nwjs/package.nw/wcc/lib/: util.js  wcsc.js
test/runner/nwjs/wcc/lib/: index.js  wcc.js
test/spec/: build-npm-mini.js  demo.spec.ts  prepare.sh
test/spec/issue/: prepare.sh
test/spec/issue/102/: .gitignore  case1.txt  issue102.spec.ts  prepare.sh
test/spec/issue/115/: issue115.spec.ts  prepare.sh
test/spec/issue/115/data/: example.json
test/spec/issue/129/: issue129.spec.ts  prepare.sh
test/spec/issue/129/data/: example.json
test/spec/prepare/: miniprogram-demo  tdesign-miniprogram-starter-retail
test/spec/wcc/empty/: version.spec.ts
test/spec/wcc/lla/: lla.js  lla.spec.ts
test/spec/wcc/llw/: llw.spec.ts
test/spec/wcc/module/: module.spec.ts  nwjs-download.sh
test/spec/wcc/module/data/: options-1719836862880.json  options-1719836863260.json  options-1719837343327.json  options-1719837343936.json  options-1719837362634.json  options-1719837363103.json
test/spec/wcc/raw/: raw.spec.ts  tdesign-miniprogram-starter-retail.spec.ts
test/spec/wcc/raw/tdesign-miniprogram-starter-retail/: case1-cmd.txt  case2-cmd.txt  case3-cmd.txt
test/spec/wcc/wxs/: sample2.json  sample3.json  wxs.spec.ts
test/spec/wcsc/empty/: version.spec.ts
test/spec/wcsc/ll/: ll.spec.ts  ll.spec1.ts
test/spec/wcsc/module/: module.spec.ts
test/spec/wcsc/module/data/: 1720324528222-wcsc-options.json  1720337273873-wcsc-options.json
test/spec/wcsc/raw/: raw.spec.ts  tdesign-miniprogram-starter-retail.spec.ts
test/spec/wcsc/raw/tdesign-miniprogram-starter-retail/: case1-cmd.txt  case2-cmd.txt
test/wcc/lla/: lla.test.js
test/wcc/llw/: llw.js  llw.test.js
test/wcc/raw/: raw.test.js
test/wcsc/: ll.test.js  raw.test.js
test/wcsc/ll/: ll.js  ll.test.js
test/wcsc/raw/: raw.test.js
test/wine/: info.txt
tools/: gcc-540.sh  install-nwjs-dependency.sh  run-test-with-docker.sh
wcc_node/src/: wcsc.js
(+6 files in other folders)
